# pyqo

./: .gitignore  README.md  build.sh
backend/: build.sh  pyproject.toml  run.sh
backend/pyqo/: db.sqlite3  manage.py  schema.yml
backend/pyqo/app/: admin.py  models.py  serializers.py  urls.py  views.py
backend/pyqo/app/migrations/: 0001_initial.py  0002_alter_item_code.py
backend/pyqo/pyqo/: asgi.py  settings.py  urls.py  views.py  wsgi.py
frontend/: .pnp.cjs  package-lock.json  package.json  schema.d.ts  theme.ts
frontend/components/: AuthenticatedProvider.tsx  DRFError.tsx  ItemPage.tsx  ItemsTable.tsx  PropertiesTable.tsx  PyqoLayout.tsx  QRCodeWithPrintOverlay.tsx
frontend/pages/: _app.tsx  index.tsx  login.tsx  properties.tsx
frontend/pages/codes/: index.tsx
frontend/pages/codes/[id]/: index.tsx  scan.tsx  view.tsx
frontend/utils/: backend.ts  backend.tsx  format.ts  hooks.ts  qr-codes.tsx
